--- a/_posts/2020-07-01.md
+++ b/_posts/2020-07-01.md
@@ -1,17 +1,10 @@
 ---
 layout: post
-title: A month of no progress, too much RDR
+title: RDR2 Mini Review
 ---
 
-June just flew by. 
-No real progress on any of my projects and it's leaving me feeling in the dumps.
-Work and home life have been in a holding pattern and I hate it. Instead of making 'progress' on projects I'm instead spending time on playing games.
 
-I can always seem to focus on the things that don't actually help me.  
-It's like I'm trying to fail.  
-Spent way too much time this last month playing Red Dead Redemption 2.  
-
-Which is both a good game and overrated.  
+RDR2 is both a good game and overrated.  
 The control is always trying to screw you over. 
 I hate how it feels like you're always pushing the wrong button.  
 I always end up shooting a guy instead of trying to defuse the situation.
